--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "react-select": "^5.10.2",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
